--- a/common/cpp.sty
+++ b/common/cpp.sty
@@ -20,6 +20,9 @@
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
   {€}{{\EUR}}1 {£}{{\pounds}}1 {ő}{{\H{o}}}1 {ű}{{\H{u}}}1 {Ő}{{\H{O}}}1
 }
+\lstdefinestyle{C++}{
+  morekeywords={noexcept}
+}
 \usepackage{hyperref}
 \usepackage{attachfile}
 \usepackage{multirow}
