--- a/common/cpp.sty
+++ b/common/cpp.sty
@@ -21,7 +21,7 @@
   {€}{{\EUR}}1 {£}{{\pounds}}1 {ő}{{\H{o}}}1 {ű}{{\H{u}}}1 {Ő}{{\H{O}}}1
 }
 \lstdefinestyle{C++}{
-  morekeywords={noexcept}
+  morekeywords={noexcept,override}
 }
 \usepackage{hyperref}
 \usepackage{attachfile}
