fix: RandomAccessIterator, string

--- a/ea05/osztalyok.tex
+++ b/ea05/osztalyok.tex
@@ -11,7 +11,7 @@
         \item Dinamikus memóriakezelést használ
         \item Tartalma megváltoztatható (mutable)
         \item Számos felültöltött operátor, pl. összefűzés \texttt{+}, indexelés \texttt{[]}
-        \item Megvalósítja a \texttt{RandomAccessIterator}t $\to$ bejárás előre -- hátra
+        \item Megvalósítja a \texttt{RandomAccessIterator}t
     \end{itemize}
 \end{frame}
 
