--- a/ea05/iterator.tex
+++ b/ea05/iterator.tex
@@ -231,7 +231,7 @@ Exception caught: Message::operator[]
 \begin{frame}
     \begin{description}[m]
         \item[C++ iterátorok] \hfill \\ ,,Iterátor bármely olyan objektum, amely adatok (például egy tömb vagy egy gyűjtemény) valamely elemére mutatva operátorok egy halmazának (ami legalább a növelő (\texttt{++}) és indirekció \texttt{*} műveleteket tartalmazza) segítségével képes az adatok között iterálni.''\hiv{\href{https://cplusplus.com/reference/iterator/}{*}} \\
-        A legkézenfekvőbb iterátor típus a \emph{mutató}, de az összetett adatszerkezetek általában bonyolultabb megoldásokat igényelnek..
+        A legkézenfekvőbb iterátor típus a \emph{mutató}, de az összetett adatszerkezetek általában bonyolultabb megoldásokat igényelnek.
     \end{description}
 \end{frame}
 
