--- a/ea05/osztalyok.tex
+++ b/ea05/osztalyok.tex
@@ -213,7 +213,7 @@ Erasing: Reverse engineering
         \item Dinamikus tömb osztálysablon
         \item Speciális eset: \texttt{vector<bool>} $\to$ bithalmaz
         \item Tartalma megváltoztatható (mutable)
-        \item Véletlen elérés: konstans  $\mathcal{O}(1)$, beszúrás/törlés a végén: amortizált $\mathcal{O}(1)$, tetszőleges helyen $\mathcal{O}(n)$.
+        \item Véletlen elérés: $\mathcal{O}(1)$, beszúrás/törlés a végén: amortizált $\mathcal{O}(1)$, tetszőleges helyen $\mathcal{O}(n)$.
     \end{itemize}
 \end{frame}
 
@@ -372,5 +372,45 @@ Swapping vectors...
         \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/vector/push_back}{\texttt{push\_back(value)}}}, \hiv{\href{https://en.cppreference.com/w/cpp/container/vector/pop_back}{\texttt{pop\_back()}}}] \hfill \\ Hozzáfűznek vagy eltávolítanak egy elemet a vektor végéhez, -ről.
         \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/vector/insert}{\texttt{insert(pos, value)}}}, \hiv{\href{https://en.cppreference.com/w/cpp/container/vector/erase}{\texttt{erase(pos)}}}] \hfill \\ \texttt{value} beszúrása a \texttt{pos} iterátorral adott helyre, vagy egy elem törlése onnan.
         \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/vector/swap}{\texttt{swap(other)}}}] \hfill \\ Két vektor elemeinek és lefoglalt tárterületének felcserélése.
+    \end{description}
+\end{frame}
+
+\subsection{A \texttt{deque} osztály}
+
+\begin{frame}
+    A \texttt{deque} osztály
+    \begin{itemize}
+        \item Fejfájl: \texttt<deque>
+        \item Hasonló a dinamikus tömbhöz, de lehetővé teszi a gyors ($\mathcal{O}(1)$) beszúrást és törlést a gyűjtemény mindkét végén. Ezt jellemzően úgy éri el, hogy az elemeket nem összefüggő memóriaterületen tárolja, hanem több, egymástól függetlenül lefoglalt memóriaterületen.
+        \item Véletlen elérés: $\mathcal{O}(1)$, beszúrás vagy törlés a széleket leszámítva $\mathcal{O}(n)$.
+        \item Tartalma megváltoztatható (mutable).
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{dequeDemo.cpp}{dequeDemo.cpp}}
+        \lstinputlisting[language=C++,style=C++,linerange={1-10},numbers=left,firstnumber=1]{dequeDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{dequeDemo.cpp}{dequeDemo.cpp}}
+        \small
+        \lstinputlisting[language=C++,style=C++,linerange={12-23},numbers=left,firstnumber=12]{dequeDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}[fragile]
+    \begin{block}{Kimenet}
+        \vspace{-.4cm}
+        \begin{verbatim}
+1 2 4 8 
+2 4
+\end{verbatim}
+        \vspace{-.3cm}
+    \end{block}
+    \vfill
+    \begin{description}[m]
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/deque/push_front}{\texttt{push\_front()}}}, \hiv{\href{https://en.cppreference.com/w/cpp/container/deque/pop_front}{\texttt{pop\_front()}}}] \hfill \\ Beszúrás / törlés a sor elején.
     \end{description}
 \end{frame}
