--- a/ea05/osztalyok.tex
+++ b/ea05/osztalyok.tex
@@ -414,3 +414,71 @@ Swapping vectors...
         \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/deque/push_front}{\texttt{push\_front()}}}, \hiv{\href{https://en.cppreference.com/w/cpp/container/deque/pop_front}{\texttt{pop\_front()}}}] \hfill \\ Beszúrás / törlés a sor elején.
     \end{description}
 \end{frame}
+
+\subsection{A \texttt{list} osztály}
+
+\begin{frame}
+    A \texttt{list} osztály
+    \begin{itemize}
+        \item Fejfájl: \texttt<list>
+        \item Két irányban láncolt lista. Egy irányban láncolt változat: \hiv{\href{https://en.cppreference.com/w/cpp/container/forward_list}{\texttt{forward\_list}}}
+        \item Gyors ($\mathcal{O}(1)$) beszúrás és törlés a gyűjtemény bármely pontján, de az elemek véletlen elérése nem támogatott, a bejárás lassú.
+        \item Tartalma megváltoztatható (mutable).
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{listDemo.cpp}{listDemo.cpp}}
+        \lstinputlisting[language=C++,style=C++,linerange={1-10},numbers=left,firstnumber=1]{listDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{listDemo.cpp}{listDemo.cpp}}
+        \small
+        \lstinputlisting[language=C++,style=C++,linerange={12-21},numbers=left,firstnumber=12]{listDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}[fragile]
+    \begin{block}{Kimenet}
+        \vspace{-.4cm}
+        \begin{verbatim}
+Square numbers: 0 1 4 9 16 25 36
+\end{verbatim}
+        \vspace{-.3cm}
+    \end{block}
+    \vfill
+    \begin{description}[m]
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/iterator/advance}{\texttt{advance(it, n)}}}] \hfill \\ Lépteti az \texttt{it} iterátort \texttt{n} elemmel. (Ha az iterátor mindkét irányban bejárható, akkor \texttt{n} értéke lehet negatív.)
+    \end{description}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{listDemo.cpp}{listDemo.cpp}}
+        \small
+        \lstinputlisting[language=C++,style=C++,linerange={22-32},numbers=left,firstnumber=22]{listDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}[fragile]
+    \begin{block}{Kimenet}
+        \small
+        \vspace{-.4cm}
+        \begin{verbatim}
+In reverse order: 36 25 16 9 4 1 0 
+After sorting: 0 1 4 9 16 25 36 
+After merging: -3 -2 -2 -2 -1 0 1 4 9 16 25 36 
+Removed duplicates: -3 -2 -1 0 1 4 9 16 25 36
+\end{verbatim}
+        \vspace{-.3cm}
+    \end{block}
+    \vfill
+    \begin{description}[m]
+        \small
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/list/reverse}{\texttt{reverse()}}}] \hfill \\ Megfordítja az elemek sorrendjét.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/list/sort}{\texttt{sort()}}}] \hfill \\ Növekvő sorrendbe rendezi az elemeket.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/list/merge}{\texttt{merge(list)}}}] \hfill \\ Átmozgatja \texttt{list} tartalmát az aktuális listába. Ha mindkettő rendezett, akkor az eredmény is az lesz.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/list/unique}{\texttt{unique()}}}] \hfill \\ Az egymást követő azonos értékek közül csak az elsőt hagyja meg.
+    \end{description}
+\end{frame}
