--- a/ea05/osztalyok.tex
+++ b/ea05/osztalyok.tex
@@ -482,3 +482,51 @@ Removed duplicates: -3 -2 -1 0 1 4 9 16 25 36
         \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/list/unique}{\texttt{unique()}}}] \hfill \\ Az egymást követő azonos értékek közül csak az elsőt hagyja meg.
     \end{description}
 \end{frame}
+
+\subsection{A \texttt{map} osztály}
+
+\begin{frame}
+    A \texttt{map} osztály
+    \begin{itemize}
+        \item Fejfájl: \texttt<map>
+        \item Asszociatív tömb / leképezés / szótár: kulcs-érték párok halmaza (kulcs nem ismétlődhet).
+        \item Elemei \hiv{\href{https://en.cppreference.com/w/cpp/utility/pair}{párok}}.
+        \item A megvalósítás többnyire \hiv{\href{https://hu.wikipedia.org/wiki/Piros-fekete_fa}{piros-fekete fával}} történik, ezért a keresés, beszúrás, törlés  ($\mathcal{O}\left(log(n)\right)$) időt vesz igénybe.
+        \item Tartalma megváltoztatható (mutable).
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{mapDemo.cpp}{mapDemo.cpp}}
+        \lstinputlisting[language=C++,style=C++,linerange={1-9},numbers=left,firstnumber=1]{mapDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}
+    \begin{exampleblock}{\textattachfile{mapDemo.cpp}{mapDemo.cpp}}
+        \footnotesize
+        \lstinputlisting[language=C++,style=C++,linerange={11-21},numbers=left,firstnumber=11]{mapDemo.cpp}
+    \end{exampleblock}
+\end{frame}
+
+\begin{frame}[fragile]
+    \begin{block}{Kimenet}
+        \small
+        \vspace{-.4cm}
+        \begin{verbatim}
+Stored pairs:
+Jenny	4
+Johnny	5
+Is Eva present? No
+\end{verbatim}
+        \vspace{-.3cm}
+    \end{block}
+    \vfill
+    \begin{description}[m]
+        \small
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/map/insert}{\texttt{insert(value)}}}] \hfill \\ Beszúr egy kulcs-érték párt.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/map/operator_at}{\texttt{operator[](key)}}}] \hfill \\ Adott kulcsú elem olvasása vagy beszúrása / módosítása.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/map/erase}{\texttt{erase(key)}}}] \hfill \\ Törli az adott kulcsú elemet, ha létezik.
+        \item[\hiv{\href{https://en.cppreference.com/w/cpp/container/map/find}{\texttt{find(key)}}}] \hfill \\ Visszaadja a \texttt{key}-t kijelölő iterátort, ha a kulcs létezik, különben az \texttt{end()} iterátort.
+    \end{description}
+\end{frame}
