--- a/ea05/ea05.tex
+++ b/ea05/ea05.tex
@@ -2,7 +2,7 @@
 \usepackage{../common/cpp}
 
 \title[OO Programozás - C++]{OO Programozás}
-\subtitle{Iterátorok, string}
+\subtitle{Iterátorok, string, STL konténerek}
 
 \begin{document}
 
