--- a/ea04/ea04.tex
+++ b/ea04/ea04.tex
@@ -51,8 +51,8 @@
         \vspace{-.4cm}
         \scriptsize
         \begin{verbatim}
-1 es 2 kozul 2 a nagyobb.
-1.5 es 2.5 kozul 2.5 a nagyobb.
+Of 1 and 2, 2 is greater.
+Of 1.5 and 2.5, 2.5 is greater.
 \end{verbatim}             
         \vspace{-.4cm}
     \end{block}
@@ -101,8 +101,8 @@
                 \footnotesize
                 \vspace{-.4cm}
                 \begin{verbatim}
-3 es 4.5 kozul 4 a nagyobb.
-4.5 es 3 kozul 4.5 a nagyobb.
+Of 3 and 4.5, 4 is greater.
+Of 4.5 and 3, 4.5 is greater.                    
                 \end{verbatim}
                 \vspace{-.4cm}
             \end{block}
@@ -119,8 +119,8 @@
         \footnotesize
         \vspace{-.4cm}
         \begin{verbatim}
-3 es 4.5 kozul 4.5 a nagyobb.
-4.5 es 3 kozul 4.5 a nagyobb.
+Of 3 and 4.5, 4.5 is greater.
+Of 4.5 and 3, 4.5 is greater.
         \end{verbatim}
         \vspace{-.4cm}
     \end{block}
