fix: ListIterator indirects to T instead of ListItem<T>

--- a/ea05/iterator.tex
+++ b/ea05/iterator.tex
@@ -47,7 +47,7 @@
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{Iterator.h}{Iterator.h}}
-        \lstinputlisting[language=C++,linerange={4-12},numbers=left,firstnumber=4]{Iterator.h}
+        \lstinputlisting[language=C++,linerange={4-10},numbers=left,firstnumber=4]{Iterator.h}
     \end{exampleblock}
 \end{frame}
 
@@ -60,7 +60,7 @@
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{Message5.h}{Message5.h}}
-        \lstinputlisting[language=C++,linerange={3-11},numbers=left,firstnumber=3]{Message5.h}
+        \lstinputlisting[language=C++,linerange={3-12},numbers=left,firstnumber=3]{Message5.h}
     \end{exampleblock}
 \end{frame}
 
@@ -81,14 +81,14 @@
 \begin{frame}
     \begin{exampleblock}{\textattachfile{Message5.h}{Message5.h}}
         \scriptsize
-        \lstinputlisting[language=C++,style=C++,linerange={27-41},numbers=left,firstnumber=27]{Message5.h}
+        \lstinputlisting[language=C++,style=C++,linerange={28-42},numbers=left,firstnumber=28]{Message5.h}
     \end{exampleblock}
 \end{frame}
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{Message5.h}{Message5.h}}
         \scriptsize
-        \lstinputlisting[language=C++,style=C++,linerange={43-58},numbers=left,firstnumber=43]{Message5.h}
+        \lstinputlisting[language=C++,style=C++,linerange={44-59},numbers=left,firstnumber=44]{Message5.h}
     \end{exampleblock}
 \end{frame}
 
@@ -100,7 +100,7 @@
     \begin{exampleblock}{\textattachfile{Message5.h}{Message5.h}}
         \scriptsize
         \vspace{-.2cm}
-        \lstinputlisting[language=C++,style=C++,linerange={60-71},numbers=left,firstnumber=60]{Message5.h}
+        \lstinputlisting[language=C++,style=C++,linerange={61-72},numbers=left,firstnumber=61]{Message5.h}
         \vspace{-.2cm}
     \end{exampleblock}
 \end{frame}
@@ -136,26 +136,21 @@
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{LinkedList.h}{LinkedList.h}}
-        \lstinputlisting[language=C++,style=C++,linerange={42-50},numbers=left,firstnumber=42]{LinkedList.h}
+        \small
+        \lstinputlisting[language=C++,style=C++,linerange={42-48},numbers=left,firstnumber=42]{LinkedList.h}
     \end{exampleblock}
 \end{frame}
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{LinkedList.h}{LinkedList.h}}
         \small
-        \lstinputlisting[language=C++,style=C++,linerange={52-58},numbers=left,firstnumber=52]{LinkedList.h}
+        \lstinputlisting[language=C++,style=C++,linerange={50-59},numbers=left,firstnumber=50]{LinkedList.h}
     \end{exampleblock}
 \end{frame}
 
 \begin{frame}
     \begin{exampleblock}{\textattachfile{LinkedList.h}{LinkedList.h}}
-        \lstinputlisting[language=C++,style=C++,linerange={60-69},numbers=left,firstnumber=60]{LinkedList.h}
-    \end{exampleblock}
-\end{frame}
-
-\begin{frame}
-    \begin{exampleblock}{\textattachfile{LinkedList.h}{LinkedList.h}}
-        \lstinputlisting[language=C++,style=C++,linerange={71-78},numbers=left,firstnumber=71]{LinkedList.h}
+        \lstinputlisting[language=C++,style=C++,linerange={61-68},numbers=left,firstnumber=61]{LinkedList.h}
     \end{exampleblock}
 \end{frame}
 
